# OpenHome

./: .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitattributes  .gitignore  .prettierignore  .prettierrc.yaml  .wakatime-project  ANDROID.md  CLAUDE.md  Cargo.toml  FORK-MAINTENANCE.md  Makefile  OpenHome.code-workspace  README.md  RUST_REWRITE.md  buildVersionJSON.ps1  buildVersionJSON.sh  buildsteamdeck.sh  check-envs.ps1  check-envs.sh  completed_rr.sav  credits.md  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  index.css  index.html  jest.config.js  makesteamdeck.sh  masterPokemon.json  output.txt  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svToNatMap.json  sync-upstream.ps1  test-fixed-parse.js  (+11 more)
openhome_cli/: Cargo.toml
openhome_cli/src/: cli.rs  main.rs  pkm.rs  save.rs
openhome_core/: Cargo.toml
openhome_core/src/: convert_strategies.rs  data_controller.rs  error.rs  lib.rs  logging.rs  lookup.rs  ohpkm_store.rs  pkm_storage.rs  saves.rs  startup_config.rs  util.rs
pkm_rs/: Cargo.toml  pkhex-encryption  pkhex-json  test-files
pkm_rs/generate/: gen_ribbons.ts  gen_species_data.ts
pkm_rs/pkm_files/ohpkm/: 0138-122fa249-6a9d0252-20.ohpkm  0150-a3a889f7-c26d28fd-07.ohpkm  0172-c4da1e09-220c950e-1f.ohpkm  0193-efad82e8-7e1c676e-18.ohpkm  0194-efad82e8-16c96557-18.ohpkm  0201-7d99c4e5-1135a84d-04.ohpkm  0201-7d99c4e5-19d9a0a3-04.ohpkm  0201-7d99c4e5-1bc1a2be-04.ohpkm  0201-7d99c4e5-1d15a46a-04.ohpkm  0201-7d99c4e5-1d5ea422-04.ohpkm  0201-7d99c4e5-24f29d8f-04.ohpkm  0201-7d99c4e5-2ef2978d-04.ohpkm  0201-7d99c4e5-5258eb22-04.ohpkm  0201-7d99c4e5-5d5de424-04.ohpkm  0201-7d99c4e5-7a1dc364-04.ohpkm  0201-7d99c4e5-be530728-04.ohpkm  0201-7d99c4e5-ce9577ed-04.ohpkm  0201-7d99c4e5-dd8364ff-04.ohpkm  0201-7d99c4e5-f3c54abb-04.ohpkm  0201-a3a889f7-4c9924ae-07.ohpkm  0201-a3a889f7-c945da98-07.ohpkm  0201-fb980000-338be35f-29.ohpkm  0201-fb980000-8168db93-29.ohpkm  0220-77f20c9a-f3c4e2f4-04.ohpkm  0225-77f20c9a-5b26cba9-04.ohpkm  0227-77f20c9a-9a6b64be-04.ohpkm  0228-1fc3fd31-18dfe20b-32.ohpkm  0231-77f20c9a-738b1d23-04.ohpkm  0234-c23c8855-43bfbd59-2f.ohpkm  0236-5b8a587a-81c42230-05.ohpkm  0236-77f20c9a-38fac735-04.ohpkm  0236-77f20c9a-e2f30a11-04.ohpkm  0238-2d266ad7-13127ec1-21.ohpkm  0238-77f20c9a-78336dcc-04.ohpkm  0239-77f20c9a-205ac787-04.ohpkm  0239-a3a889f7-319965ab-07.ohpkm  0240-0aa83883-56241fd1-17.ohpkm  0240-2d266ad7-56ebff20-21.ohpkm  0240-a3a889f7-9cac36d3-07.ohpkm  0240-dc19ec19-6113e9d3-05.ohpkm  (+36 more)
pkm_rs/pkm_files/pk3/: ribbon-master.pkm  unown-e.pk3
pkm_rs/pkm_files/pk4/: typhlosion.pkm
pkm_rs/src/: bytes.rs  checksum.rs  convert_strategy.rs  encryption.rs  expected.txt  format.rs  lib.rs  location.rs  mod.rs  old_main.rs  result.rs  save.rs  tests.rs  util.rs
pkm_rs/src/conversion/: gameboy_string_encoding.rs  gen1_pokemon_index.rs  gen3_pokemon_index.rs  gen3_string_encoding.rs  gen4_string_encoding.rs  mod.rs  sv_pokemon_index.rs
pkm_rs/src/convert_strategy/: converter.rs  option.rs  personality_value.rs
pkm_rs/src/encryption/: meme_crypto.rs  swish_crypto.rs
pkm_rs/src/files/: mod.rs  ohpkm.rs  pk3.rs  pk5.rs  pk6.rs  pk8.rs  tests.rs
pkm_rs/src/gen3/: interface.rs  mod.rs  pk3.rs  pk3_buffer.rs  pokemon_index.rs  save.rs
pkm_rs/src/gen7_alola/: mod.rs  pk7.rs  pk7_buffer.rs  save.rs
pkm_rs/src/gen7_lgpe/: mod.rs  pb7.rs  save.rs
pkm_rs/src/gen8_swsh/: mod.rs  pk8.rs  pk8_buffer.rs  save.rs  save_blocks.rs
pkm_rs/src/gen9_sv/: mod.rs  pk9.rs  pk9_buffer.rs  pokemon_index.rs
pkm_rs/src/location/: gen2.rs  gen3_gba.rs  gen4.rs
pkm_rs/src/ohpkm/: convert.rs  deprecated.rs  extra_form.rs  issues.rs  mod.rs  sectioned_data.rs  v1.rs  v2.rs  v2_dev.rs  v2_sections.rs
pkm_rs/src/pkm/: convert_strategy.rs  format.rs  helpers.rs  location.rs  mod.rs  ohpkm.rs  pb7.rs  pk3.rs  pk3cfru.rs  pk5.rs  pk6.rs  pk7.rs  pk8.rs  result.rs  tests.rs  universal.rs
pkm_rs/src/resources/: abilities.rs  ball.rs  games.rs  language.rs  mod.rs  moves.rs  natures.rs  restrictions.rs
pkm_rs/src/rom_hacks/: mod.rs
pkm_rs/src/saves/: gen7_alola.rs  lets_go.rs  mod.rs  sun_moon.rs  tests.rs  types.rs
pkm_rs/src/strings/: gameboy.rs  gen3.rs  gen4.rs  gen5.rs  mod.rs  utf16.rs
pkm_rs/src/substructures/: markings.rs  mod.rs  stats.rs  structures.rs
pkm_rs/src/tests/: pkm.rs
pkm_rs/src/traits/: bytes.rs  identifiers.rs  mod.rs  ohpkm_byte.rs  pkm.rs  save_data.rs  stats.rs
pkm_rs/text_source/: abilities.txt  balls.txt  ribbons_contest_3_4.txt  ribbons_modern.txt  ribbons_openhome.txt
pkm_rs_derive/: Cargo.toml
pkm_rs_derive/src/: lib.rs  randomize.rs
pkm_rs_resources/: Cargo.toml
pkm_rs_resources/generate/: gen_abilities.ts  gen_items.ts  gen_moves.ts  gen_species_data.ts  package-lock.json  package.json  pkm.db  queries.ts  tsconfig.json
pkm_rs_resources/src/: abilities.rs  ball.rs  games.rs  helpers.rs  items.rs  language.rs  levelup.rs  lib.rs  lookup.rs  metadata_source.rs  moves.rs  natures.rs  restrictions.rs  result.rs  stats.rs  text_resource.rs
pkm_rs_resources/src/items/: gen1.rs  gen2.rs  gen3.rs  (+6 more)
pkm_rs_resources/text_source/: species.json
pkm_rs_types/: Cargo.toml
pkm_rs_types/src/: bounded.rs  capped.rs  games.rs  language.rs  lib.rs  log.rs  markings.rs  national_dex.rs  pkl_file.rs  pkm_types.rs  randomize.rs  result.rs  stats.rs  structures.rs  traits.rs  util.rs
src-tauri/: Cargo.toml  dev.andrewbenington.OpenHome.metainfo.xml  emulator_paths.json  org.andrewbenington.OpenHome.metainfo.xml  tauri.conf.json  template.desktop
src-tauri/assets/: Pkm.db
src-tauri/capabilities/: default.json  desktop.json
src-tauri/generate/: gen_ribbons.ts  gen_species_data.ts
src-tauri/icons/: icon.icns
src-tauri/src/: assets.rs  auto_detect.rs  commands.rs  data_controller.rs  error.rs  lib.rs  logging.rs  main.rs  menu.rs  pkm_storage.rs  plugin.rs  progression_rewards.rs  progression_storage.rs  saves.rs  startup.rs  startup_config.rs  state.rs  storage.rs  util.rs  versioning.rs
src-tauri/text_source/: ribbons_modern_titles.txt  ribbons_openhome.txt
(+1875 files in other folders)
