[package]
name = "pkm_rs_derive"
version = "1.9.1"
authors = ["Andrew Benington"]
edition = "2024"
description = "Macros for the pkm_rs crate"
repository = "https://github.com/andrewbenington/OpenHome"
license = "GPL-3.0+"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.117", features = ["full"] }
quote = "1"
proc-macro2 = "1.0.106"
