[package]
name = "OpenHome"
version = "1.10.5"
description = "A tool for moving Pokémon between game saves"
authors = ["Andrew Benington"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "openhome_lib"
crate-type = ["cdylib", "rlib"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
pkm_rs = {path = "../pkm_rs"}
tauri = { version = "2.10.3", features = [] }
tauri-plugin-shell = "2.3.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri-plugin-os = "2.3.2"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"
reqwest = { version = "0.13.2" }
base64 = "0.22.1"
zip = "8.5.1"
static_assertions = "1.1.0"
bytes = "1.11.1"
semver = "1.0.28"
strum = { version = "0.28.0", features = ["derive"] }
uuid = { version = "1.23.0", features = ["v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
dialog = "0.3.0"

[features]
wasm = []
