[package]
name = "OpenHome"
version = "1.12.4"
description = "A tool for moving Pokémon between game saves"
authors = ["Andrew Benington"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "openhome_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
pkm_rs = {path = "../pkm_rs"}
pkm_rs_derive = {path = "../pkm_rs_derive"}
tauri = { version = "2.11.3", features = [] }
tauri-plugin-shell = "2.3.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri-plugin-os = "2.3.2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
reqwest = { version = "0.13.4", features = [] }
base64 = "0.22.1"
zip = "8.6.0"
static_assertions = "1.1.0"
sha2 = "0.11.0"
num = "0.4.3"
toml = "1.1.2"
bytes = "1.12.0"
semver = "1.0.28"
strum = { version = "0.28.0", features = ["derive"] }
uuid = { version = "1.23.3", features = ["v4"] }
tauri-plugin-process = "2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tracing-appender = "0.2.5"
chrono = { version = "0.4.45", features = ["serde"] }
tokio = "1.52.3"
specta = { version = "=2.0.0-rc.22", features = ["chrono", "serde_json", "uuid" ] }
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }

[target.'cfg(target_os = "linux")'.dependencies]
dialog = "0.3.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

[features]
wasm = []
